# rp2040_mpu9250

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  mpu-9250.c  mpu-9250.h
